--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Avalon vote tracker</title>
+    <style>
+      html {
+        font-family: lato, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
