--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       html {
         font-family: lato, sans-serif;
       }
+      html, body, #app, #app>div {
+          height: 100%
+      }
     </style>
   </head>
   <body>
