Run prettier on index HTML file

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
       html {
         font-family: lato, sans-serif;
       }
-      html, body, #app, #app>div {
-          height: 100%
+      html,
+      body,
+      #app,
+      #app > div {
+        height: 100%;
       }
     </style>
   </head>
