Add lots of styling

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Avalon vote tracker</title>
     <style>
-      html {
-        font-family: lato, sans-serif;
-      }
       html,
       body,
       #app,
